--- a/package.json
+++ b/package.json
@@ -8,12 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "liquid-glass-react": "^1.1.1",
+    "motion": "^12.23.22",
+    "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.4"
+    "react-icons": "^5.5.0",
+    "three": "^0.180.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "@types/node": "24.6.0",
+    "@types/react": "19.1.15",
+    "tailwindcss": "^4",
+    "typescript": "5.9.2"
   }
 }
